[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mbed-ce-tools"
version = "0.0.1"
description = 'Tools for building and testing Mbed OS Community Edition'
requires-python = ">=3.8"
license = "Apache-2.0"
dependencies = [
    # memap dependencies ---------------------------------------------------------------------
    "intelhex>=2.3.0,<3.0.0",

    # 3.12.0 both added HRuleStyle and deprecated the old constants in one single release :/
    "prettytable>=2.0,<3.12.0; python_version < '3.9'",
    "prettytable>=3.12.0; python_version >= '3.9'",

    # mbed_tools dependencies ----------------------------------------------------------------
    "jinja2>=2.11.3",
    "python-dotenv",
    "Click>=8.0", # Need at least this version for pathlib.Path support
    "GitPython",
    "tqdm",
    "tabulate",
    "requests>=2.20",
    "typing-extensions",
    "pyserial",
    "appdirs",
    "pyjson5>=1.6",
    "humanize>=4.9.0",
    "setuptools>=64.0",

    # Needed for downloading CMSIS MCU descriptions
    "cmsis-pack-manager>=0.5.0",

    # USB device detection on Mac
    "pywin32; platform_system=='Windows'",

    # USB device detection on Linux
    "psutil; platform_system=='Linux'",
    "pyudev; platform_system=='Linux'",

    # USB device detection on Mac
    "beautifulsoup4; sys_platform == 'darwin'",
    "lxml; sys_platform == 'darwin'",

    # mbed_os_tools.test dependencies ---------------------------------------------------------
    "junit-xml>=1.0",
    "lockfile",
    "colorama",

    # mbed_os_tools.detect dependencies -------------------------------------------------------
    "fasteners",

    # needed for signing secure images --------------------------------------------------------
    "cryptography",
    "cbor"
]

[project.optional-dependencies]
unit-tests = [
    "pytest",
    "factory_boy",
    "requests-mock",
    "mock",
    "coverage",

    # Even though beautifulsoup4 and lxml are only used by the mac version
    # of mbed ls tools, they're needed on all platforms for its unit test.
    "beautifulsoup4",
    "lxml"
]
greentea = [
    ## Additional requirements to install into the Mbed environment when running Greentea tests
    # For USB Device host tests
    "hidapi>=0.7.99",
    "pyusb>=1.2.0",
    "wmi>=1.5; platform_system == 'Windows'",
]

# Install this optional dependency group to get IDE completion for packages used by the mbed_platformio package.
# Note that this package is actually run in platformio's venv, not the Mbed venv, so there is no other need to install these.
platformio = [
    "SCons",
    "platformio"
]

[tool.hatch.build.targets.wheel]
packages = [
    "python/mbed_host_tests",
    "python/mbed_lstools",
    "python/mbed_os_tools",
    "python/mbed_tools",
    "python/memap",
    "python/scancode_evaluate",
    "python/ambiq_svl"
]

[project.scripts]
mbedhtrun = "mbed_host_tests.mbedhtrun:main"
mbedls = "mbed_lstools.main:mbedls_main"
mbed-tools = "mbed_tools.cli.main:cli"
memap = "memap.memap:main"
ambiq_svl = "ambiq_svl.svl:cli"
